# django-dark

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
dark/less/: dark.less
dark/static/admin/css/: dark.css
less/: dark.less
requirements/: common.txt
static/admin/css/: dark.css
